<resources>
    <string name="app_name">LoginApp</string>
    <string name="app_title">LOGIN</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="submit">SUBMIT</string>
    <string name="register">REGISTER</string>
    <string name="fname">FIRST NAME</string>
    <string name="lname">LAST NAME</string>
    <string name="personal_details">Personal Details</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
</resources>