<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:background="@color/Aquamarine">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_title"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:fontFamily="@font/squashy_flow"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/Coral">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/ic_search_24dp"
            app:startIconContentDescription="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_lock_24dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:fontFamily="@font/squashy_flow"/>

        <Button
            android:id="@+id/registerAccount"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:fontFamily="@font/squashy_flow"/>

    </LinearLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </fragment>

</LinearLayout>